eks/nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: artemis-broker-hdls-svc-nlb
  namespace: eks-artemis-operator
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
spec:
  type: LoadBalancer
  ports:
    - port: 8161
      targetPort: 8161
      protocol: http
  selector:
    app.kubernetes.io/name: artemis-broker-hdls-svc
    app.kubernetes.io/instance: artemis-broker-hdls-svc
    app.kubernetes.io/component: service
