eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # Just the name, is not used for actual ingress configuration (`kubectl get ingress` returns the name)
  name: artemis-broker-ingress
  namespace: eks-artemis-operator
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/liveness
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /console
        pathType: Prefix
        backend:
          service:
            name: artemis-broker-hdls-svc
            port:
              number: 8161
